care-australia-uat/force-app/main/default/objects/RG_Response__c/RG_Response__c.object-meta.xml
<CustomObject>
    <description>RG_Responses capture the bank response codes from Bambora for processing Regular Gifts</description>
    <label>RG Response</label>
    <nameField>
        <displayFormat>RGR{0000}</displayFormat>
        <label>RG Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RG Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>