care-australia-uat/force-app/main/default/objects/RG_Response__c/fields/Financial_Institution_Name__c.field-meta.xml
<CustomField>
    <fullName>Financial_Institution_Name__c</fullName>
    <label>Financial Institution Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>