care-australia-uat/force-app/main/default/objects/RG_Response__c/fields/Merchant_Category__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Category__c</fullName>
    <label>Merchant Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Merchant_Category</valueSetName>
    </valueSet>
</CustomField>