care-australia-uat/force-app/main/default/objects/RG_Response__c/fields/Payment_Result__c.field-meta.xml
<CustomField>
    <fullName>Payment_Result__c</fullName>
    <label>Payment Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Result</valueSetName>
    </valueSet>
</CustomField>