care-australia-uat/force-app/main/default/objects/RG_Response__c/fields/Response_Code_Ref__c.field-meta.xml
<CustomField>
    <fullName>Response_Code_Ref__c</fullName>
    <formula>IF(
OR( ISBLANK(TEXT(Merchant_Category__c )),
ISBLANK( TEXT(Payment_Method__c )),
ISBLANK(Response_Code__c)
),
NULL,
SUBSTITUTE(TEXT(Merchant_Category__c)&amp;&quot;&quot;&amp;TEXT(Payment_Method__c)&amp;&quot;&quot;&amp;Response_Code__c,&quot; &quot;,&quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Code Ref</label>
    <type>Text</type>
</CustomField>