care-australia-uat/force-app/main/default/objects/RG_Response__c/fields/Result_Description__c.field-meta.xml
<CustomField>
    <fullName>Result_Description__c</fullName>
    <label>Result Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>