care-australia-uat/force-app/main/default/objects/RG_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Financial_Institution_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Merchant_Category__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Payment_Result__c</columns>
    <columns>Response_Code__c</columns>
    <columns>Response_Code_Ref__c</columns>
    <columns>Result_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>